my profile my produts done

--- a/WebClient/src/components/commonComponents/addressPopupComponent/addressPopupComponent.template.html
+++ b/WebClient/src/components/commonComponents/addressPopupComponent/addressPopupComponent.template.html
@@ -6,7 +6,7 @@
                     data-dismiss="modal">
                     &times;
                 </button>
-                <h5>Add/Edit Address</h5>
+                <h5 class="header-subscribe">Add/Edit Address</h5>
             </div>
 
             <div class="modal-body">
@@ -60,8 +60,8 @@
 
             </div>
             <div class="modal-footer">
-                <button class="btn btn-danger btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
-                <button class="btn btn-success btn-sm pull-right" title="Save Address" @click="saveAddress(1)">Save</button>
+                <button class="btn btn-primary btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
+                <button class="btn btn-primary btn-sm pull-right" title="Save Address" @click="saveAddress(1)">Save</button>
             </div>
         </div>
     </div>
