--- a/WebClient/src/components/commonComponents/deleteConfirmationPopup/deleteConfirmationPopup.template.html
+++ b/WebClient/src/components/commonComponents/deleteConfirmationPopup/deleteConfirmationPopup.template.html
@@ -14,9 +14,9 @@
 
             </div>
             <div class="modal-footer">
-                <button class="btn btn-danger btn-sm pull-right" title="No"
+                <button class="btn btn-primary btn-sm pull-right" title="No"
                     @click="confirm">No</button>
-                <button class="btn btn-success btn-sm pull-right" title="Yes" @click="confirm(1)">Yes</button>
+                <button class="btn btn-primary btn-sm pull-right" title="Yes" @click="confirm(1)">Yes</button>
             </div>
         </div>
     </div>
