--- a/WebClient/src/components/myaccount/vehicleAddComponent/vehicleAddComponent.template.html
+++ b/WebClient/src/components/myaccount/vehicleAddComponent/vehicleAddComponent.template.html
@@ -92,8 +92,8 @@
 
             </div>
             <div class="modal-footer">
-                <button class="btn btn-danger btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
-                <button class="btn btn-success btn-sm pull-right" title="Save User" @click="addNewVehicle">Add</button>
+                <button class="btn btn-primary btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
+                <button class="btn btn-primary btn-sm pull-right" title="Save User" @click="addNewVehicle">Add</button>
             </div>
         </div>
     </div>
@@ -119,7 +119,7 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-danger btn-sm pull-right" title="No"
+                    <button class="btn btn-primary btn-sm pull-right" title="No"
                         @click="closeValidationPopup">OK</button>
                 </div>
             </div>
