--- a/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
+++ b/WebClient/src/components/myaccount/mysubscriptions/mysubscriptions.template.html
@@ -84,8 +84,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-danger btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
-                    <button class="btn btn-success btn-sm pull-right" title="Save User"
+                    <button class="btn btn-primary btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
+                    <button class="btn btn-primary btn-sm pull-right" title="Save User"
                         @click="pauseSubscription">Confirm</button>
                 </div>
             </div>
@@ -120,8 +120,8 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button class="btn btn-danger btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
-                    <button class="btn btn-success btn-sm pull-right" title="Save User"
+                    <button class="btn btn-primary btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
+                    <button class="btn btn-primary btn-sm pull-right" title="Save User"
                         @click="deleteCustomerService">Delete</button>
                 </div>
             </div>
