--- a/WebClient/src/components/servicePersonComponents/servicePersonHomePageComponent/servicePersonHomePageComponent.template.html
+++ b/WebClient/src/components/servicePersonComponents/servicePersonHomePageComponent/servicePersonHomePageComponent.template.html
@@ -75,9 +75,9 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-primary btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
-                    <button class="btn btn-success btn-sm pull-right" title="Save User"
+                    <button class="btn btn-primary btn-sm pull-right" title="Save User"
                         @click="showConfirmationPopup('yes')">Yes</button>
-                    <button class="btn btn-danger btn-sm pull-right" title="Cancel"
+                    <button class="btn btn-primary btn-sm pull-right" title="Cancel"
                         @click="showConfirmationPopup('no')">No</button>
                 </div>
             </div>
