--- a/WebClient/src/components/userModule/userDetailModule/userDetailVue.template.html
+++ b/WebClient/src/components/userModule/userDetailModule/userDetailVue.template.html
@@ -7,8 +7,8 @@
         <div class="editContainerHeading">
           <h6 class="pull-left mt-2" v-if="displaySectionValue === 'userDetails'">User details</h6>
 
-          <button class="btn btn-success btn-sm pull-right" title="Save User" @click="saveUser">Save</button>
-          <button class="btn btn-danger btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
+          <button class="btn btn-primary btn-sm pull-right" title="Save User" @click="saveUser">Save</button>
+          <button class="btn btn-primary btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
         </div>
 
        
