--- a/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
+++ b/WebClient/src/components/homeModule/homePageComponent/homePageComponent.template.html
@@ -73,10 +73,10 @@
                     </div>
                     <div class="cellrow res" style="overflow: scroll;">
                         <div v-if="frequentServices.length" class="cellCol respno"
-                            v-for="(service, index) in frequentServices" style="padding: 5px;">
+                            v-for="(service, index) in frequentServices" style="padding: 5px; max-width: 200px;">
 
                             <img :src="service.ServiceImage ? service.ServiceImage : (service.VehicleCategoryType == 2 ? defaultCarImage : defaultBikeImage)"
-                                class="serviceCardImg" @click="showMoreInfo(service)" height="auto" width="100%">
+                                class="serviceCardImg" @click="showMoreInfo(service)" height="auto">
                             <div class="serviceName">
                                 <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}}<br></span>
                                 <span class="mt-3" style="font-weight: 500;">Starting from ₹
@@ -111,7 +111,7 @@
                                 style="padding: 5px;">
 
                                 <img :src="service.ServiceImage ? service.ServiceImage : (service.VehicleCategoryType == 2 ? defaultCarImage : defaultBikeImage)"
-                                    class="serviceCardImg" @click="showMoreInfo(service)" height="auto" width="100%">
+                                    class="serviceCardImg" @click="showMoreInfo(service)" height="auto">
                                 <div class="serviceName">
                                     <span class="mt-3" style="font-weight: 500;">{{service.ServiceName}}<br></span>
                                     <span class="mt-3" style="font-weight: 500;">Starting from ₹
