--- a/WebClient/src/components/myaccount/myOrders/myOrders.template.html
+++ b/WebClient/src/components/myaccount/myOrders/myOrders.template.html
@@ -33,6 +33,7 @@
                                     <th>Amount</th>
                                     <th>Quantity</th>
                                     <th>Product Name</th>
+                                    <th>Subscription</th>
                                     <th>Status</th>
                                     <th>
                                         Actions
@@ -130,8 +131,8 @@
         </div>
     </div>
 
-    <div class="modal" data-backdrop="static" role="dialog" id="deleteConfimationPopup">
-        <div class="modal-dialog" v-if="serviceObj">
+    <div class="modal" data-backdrop="static" role="dialog" id="deleteOrderConfimationPopup">
+        <div class="modal-dialog" v-if="selectedServiceItem">
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" style="position: absolute; right: 15px; top: 22px;"
@@ -152,7 +153,7 @@
                         </div>
                     </div>
                     <div class="form-group" v-if="selectedReasons.indexOf(5) > -1">
-                        <input type="text" v-model="serviceObj.OtherReason" class="form-control"
+                        <input type="text" v-model="selectedServiceItem.OtherReason" class="form-control"
                             placeholder="Please specify reason">
                     </div>
 
@@ -160,7 +161,7 @@
                 <div class="modal-footer">
                     <button class="btn btn-primary btn-sm pull-right" title="Cancel" @click="cancel">Cancel</button>
                     <button class="btn btn-primary btn-sm pull-right" title="Save User"
-                        @click="deleteCustomerService">Delete</button>
+                        @click="deleteMyOrder">Delete</button>
                 </div>
             </div>
         </div>
