--- a/WebClient/src/components/adminModule/addAmountToWallet/addAmountToWallet.template.html
+++ b/WebClient/src/components/adminModule/addAmountToWallet/addAmountToWallet.template.html
@@ -31,7 +31,7 @@
                             <td style="text-align: left;">₹ {{user.WalletAmount }}</td>
                             <td> <input type="number" v-model="user.rechargeAmount"> </td>
                             <td>
-                                <button class="btn btn-default" @click="rechargeToUser(user)">
+                                <button class="btn btn-primary" @click="rechargeToUser(user)">
                                     Recharge
                                 </button>
                             </td>
