--- a/WebClient/src/components/customerModule/supportComponent/supportComponent.template.html
+++ b/WebClient/src/components/customerModule/supportComponent/supportComponent.template.html
@@ -48,8 +48,8 @@
 
                     <div class="col-md-12">
                         <div class="form-group">
-                            <button class="btn btn-danger" @click="resetForm">Reset</button>
-                            <button class="btn btn-default" @click="submitForm">Submit</button>
+                            <button class="btn btn-primary" @click="resetForm">Reset</button>
+                            <button class="btn btn-primary" @click="submitForm">Submit</button>
                         </div>
                     </div>
 
