--- a/WebClient/src/components/myaccount/myOrders/myOrders.template.html
+++ b/WebClient/src/components/myaccount/myOrders/myOrders.template.html
@@ -20,7 +20,7 @@
                             :pickerType="'date'">
                         </datePickerComponent>
                     
-                        <button style="float: right;" class="btn btn-default" @click="getMyOrders">Apply</button>
+                        <button style="float: right;" class="btn btn-primary" @click="getMyOrders">Apply</button>
                     </div>
                     </div>
 
