--- a/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
+++ b/WebClient/src/components/userProfilePanel/userProfilePanel.template.html
@@ -19,7 +19,7 @@
         </div>
         <div class="row">
             <div class="cold-md-12" style="text-align: center;">
-                <button class="btn btn-default">Recharge</button>
+                <button class="btn btn-primary">Recharge</button>
             </div>
         </div>
         <div>
